--- a/moj_stil.css
+++ b/moj_stil.css
@@ -6,4 +6,35 @@ body
         top: 60px;
         right: 120px;
     }
+    
+        #jahaci li{
+            display: inline;
+        }
+        #jahaci{
+            color: #000;
+            border-bottom: 2px solid #8b0000;
+            margin-top: 50px;
+            margin-right: 0px;
+            margin-bottom: 0px;
+            margin-left: 0px;
+            padding: 1px;
+            padding-left: 30px;
+        }
+        #jahaci li a{
+            color: #000;
+            background: #d9dbe1;
+            border: 2px solid #8b0000;
+            padding: 3px 5px 1px 5px;
+            margin:0px;
+            text-decoration: none;
+        }
+        #jahaci li a:hover{
+            border-bottom-color:white;
+            background-color: #eee;
+            color: #445372;
+        }
+        #jahaci li a:active{
+            color: #c00;
+        }
+
 }
