--- a/moj_stil.css
+++ b/moj_stil.css
@@ -10,7 +10,7 @@ img.ozzy {
         }
     #jahaci{
             color: #000;
-            border-bottom: 2px solid #8b0000;
+            border-bottom: 2px solid #808080;
             margin-top: 50px;
             margin-right: 0px;
             margin-bottom: 0px;
@@ -20,8 +20,8 @@ img.ozzy {
         }
      #jahaci li a{
             color: #000;
-            background: #d9dbe1;
-            border: 2px solid #8b0000;
+            background: #000000;
+            border: 2px solid #808080
             padding: 3px 5px 1px 5px;
             margin:0px;
             text-decoration: none;
@@ -29,10 +29,10 @@ img.ozzy {
     #jahaci li a:hover{
             border-bottom-color:white;
             background-color: #eee;
-            color: #445372;
+            color: #000000;
     }
     #jahaci li a:active{
-            color: #c00;
+            color: #000000;
         }
 
 
