--- a/moj_stil.css
+++ b/moj_stil.css
@@ -4,6 +4,12 @@ img.ozzy {
         top: 60px;
         right: 120px;
     }
+
+img.naslov_pozadina {
+        position: absolute;
+        top: 60px;
+       
+    }
     
     #jahaci {
             display: flex;
