--- a/moj_stil.css
+++ b/moj_stil.css
@@ -55,5 +55,5 @@ img.naslov_pozadina {
 h1.naslov{
         text-align: center;
     margin-top: 20px;
-        color: #ffffff;
+        color: #fff;
 }
