--- a/moj_stil.css
+++ b/moj_stil.css
@@ -1,4 +1,9 @@
 
+body {
+        font-family: Arial, sans-serif;
+}
+
+
 img.ozzy {
         position: absolute;
         top: 60px;
@@ -10,7 +15,7 @@ img.naslov_pozadina {
             margin: 0 auto;
             margin-top: 20px;
             width: 100%;
-                height: 200px;
+                height: auto;
     }
     
     #jahaci {
@@ -55,5 +60,6 @@ img.naslov_pozadina {
 h1.naslov{
         text-align: center;
     margin-top: 20px;
+         font-size: 2em;
         color: #fff;
 }
