--- a/moj_stil.css
+++ b/moj_stil.css
@@ -21,8 +21,8 @@ img.clanovi{
 
 img.ozzy {
         position: absolute;
-        top: 150px;
-        right: 300px;
+        top: 200px;
+        right: 310;
     }
 
 
