--- a/moj_stil.css
+++ b/moj_stil.css
@@ -82,217 +82,90 @@ h1.naslov{
 
 
 
-%animation-default {
-  opacity: 1 !important;
-  z-index: 3;
+
+.carousel-wrapper{
+  height:400px;
+  position:relative;
+  width:800px;
+  margin:0 auto;
+}
+.carousel-item{
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  padding:25px 50px;
+  opacity:0;
+  transition: all 0.5s ease-in-out;
+}
+.arrow{
+  border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 12px;
 }
 
-@mixin carousel($items, $animation: 'default') {
-  .carousel {
-    width: 100%;
-    position: relative;
-    overflow: hidden;
+.arrow-prev{
+  left:-30px;
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%) rotate(135deg);
+}
+ 
+.arrow-next{
+    right:-30px;
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%) rotate(-45deg);
+  }
 
-    > input[type="radio"] {
-      position: absolute;
-      left: 0;
-      opacity: 0;
-      top: 0;
+.light{
+  color:white;
+}
 
-      &:checked {
-        ~ .carousel__items .carousel__item,
-        ~ .carousel__prev > label,
-        ~ .carousel__next > label {
-          opacity: 0;
-        }
-      }
-
-      @for $i from 1 through $items {
-        &:nth-child(#{$i}) {
-          &:checked {
-            ~ .carousel__items .carousel__item {
-              @if $animation == 'default' {
-                &:nth-child(#{$i}) {
-                  opacity: 1;
-                }
-              }
-            }
-
-            ~ .carousel__prev {
-              > label {
-                @if $i == 1 {
-                  &:nth-child(#{$items}) {
-                    @extend %animation-default;
-                  }
-                } @else if $i == $items {
-                  &:nth-child(#{$items - 1}) {
-                    @extend %animation-default;
-                  }
-                } @else {
-                  &:nth-child(#{$i - 1}) {
-                    @extend %animation-default;
-                  }
-                }
-              }
-            }
-
-            ~ .carousel__next {
-              > label {
-                @if $i == $items {
-                  &:nth-child(1) {
-                    @extend %animation-default;
-                  }
-                } @else {
-                  &:nth-child(#{$i + 1}) {
-                    @extend %animation-default;
-                  }
-                }
-              }
-            }
-
-            ~ .carousel__nav {
-              > label {
-                &:nth-child(#{$i}) {
-                  background: #ccc;
-                  cursor: default;
-                  pointer-events: none;
-                }
-              }
-            }
-          }
-        }
+@media (max-width: 480px) {
+      .arrow, .light .arrow {
+        background-size: 10px;
+        background-position: 10px 50%;
       }
     }
+}
 
-    &__items {
-      margin: 0;
-      padding: 0;
-      list-style-type: none;
-      width: 100%;
-      height: 600px;
-      position: relative;
-    }
+/*Select every element*/
+[id^="item"] {
+    display: none;
+  }
 
-    &__item {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-      transition: opacity 2s;
-      -webkit-transition: opacity 2s;
+.item-1 {
+    z-index: 2;
+    opacity: 1;
+  background:url('https://static.pexels.com/photos/6526/sea-beach-holiday-vacation-large.jpg');
+  background-size:cover;
+  }
+.item-2{
+  background:url('https://static.pexels.com/photos/6506/alcohol-bar-drinks-party-large.jpg');
+   background-size:cover;
+}
+.item-3{
+  background:url('https://static.pexels.com/photos/6529/lake-kajak-kayak-large.jpg');
+   background-size:cover;
+}
 
-      img {
-        width: 100%;
-        vertical-align: middle;
-      }
-    }
+*:target ~ .item-1 {
+    opacity: 0;
+  }
 
-    &__prev,
-    &__next {
-      > label {
-        border: 1px solid #fff;
-        border-radius: 50%;
-        cursor: pointer;
-        display: block;
-        width: 40px;
-        height: 40px;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        -webkit-transform: translateY(-50%);
-        transition: all .3s ease;
-        -webkit-transition: all .3s ease;
-        opacity: 0;
-        z-index: 2;
+#item-1:target ~ .item-1 {
+    opacity: 1;
+  }
 
-        &:hover,
-        &:focus {
-          opacity: .5 !important;
-        }
-
-        &:before,
-        &:after {
-          content: "";
-          position: absolute;
-          width: inherit;
-          height: inherit;
-        }
-
-        &:before {
-          background: linear-gradient(to top, #fff 0%, #fff 10%, rgba(51, 51, 51, 0) 10%),
-                      linear-gradient(to left, #fff 0%, #fff 10%, rgba(51, 51, 51, 0) 10%);
-          width: 60%;
-          height: 60%;
-          top: 20%;
-        }
-      }
-    }
-
-    &__prev {
-      > label {
-        left: 2%;
-
-        &:before {
-          left: 35%;
-          top: 20%;
-          transform: rotate(135deg);
-          -webkit-transform: rotate(135deg);
-        }
-      }
-    }
-
-    &__next {
-      > label {
-        right: 2%;
-
-        &:before {
-          left: 10%;
-          transform: rotate(315deg);
-          -webkit-transform: rotate(315deg);
-        }
-      }
-    }
-
-    &__nav {
-      position: absolute;
-      bottom: 3%;
-      left: 0;
-      text-align: center;
-      width: 100%;
-      z-index: 3;
-
-      > label {
-        border: 1px solid #fff;
-        display: inline-block;
-        border-radius: 50%;
-        cursor: pointer;
-        margin: 0 .125%;
-        width: 20px;
-        height: 20px;
-      }
-    }
+#item-2:target ~ .item-2, #item-3:target ~ .item-3 {
+    z-index: 3;
+    opacity: 1;
   }
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
 
-body {
-  background: #fcfcfc;
-  margin: 0;
-}
 
-.container {
-  width: 900px;
-  min-width: 900px;
-  margin: 50px auto;
-}
 
-@include carousel(5);
