--- a/moj_stil.css
+++ b/moj_stil.css
@@ -80,7 +80,18 @@ h1.naslov{
 
 
 
+.centrirana-lista {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
 
+ul.centar {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
 
 
 
