--- a/moj_stil.css
+++ b/moj_stil.css
@@ -8,7 +8,8 @@
 body {
         font-family: Arial, sans-serif;
          padding: 20px;
-        background-color: #f0f0f0; 
+   background-color: #444;
+    color: #fff;
 
 }
 
