--- a/moj_stil.css
+++ b/moj_stil.css
@@ -8,7 +8,7 @@
 body {
         font-family: Arial, sans-serif;
          padding: 20px;
-   background-color: ##899499;
+   background-color: #899499;
     color: #fff;
 
 }
