--- a/moj_stil.css
+++ b/moj_stil.css
@@ -55,7 +55,7 @@ ul {
 
 #jahaci li a {
     color: #fff;
-    background: #ffffff;
+    background: #333;
     border: 2px solid #808080;
     padding: 3px 5px 1px 5px;
     margin: 0px;
@@ -70,7 +70,7 @@ ul {
 }
 
 #jahaci li a:active {
-    color: #000000;
+    color: #000;
 }
 
 
