--- a/moj_stil.css
+++ b/moj_stil.css
@@ -9,7 +9,7 @@ body {
         font-family: Arial, sans-serif;
          padding: 20px;
    background-color: #899499;
-    color: #fff;
+    color: #000;
 
 }
 
